# Datacamp_follicles_detection

./: .gitignore  README.md  pyproject.toml
scripts/: download_data.py  test_DERT.ipynb  utils.py
