[tool.poetry]
name = "follicles_detection"
version = "0.1.0"
description = ""
authors = ["Guillaume <guillaume.peltier.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.1"
scikit-learn = "^1.0.2"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
jupyterlab = "^3.2.8"
tensorflow = "^2.7.0"
osfclient = "^0.0.5"
ramp-workflow = "^0.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
