[tool.poetry]
name = "follicles_detection"
version = "0.1.0"
description = ""
authors = ["Guillaume <guillaume.peltier.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.1"
scikit-learn = "^1.0.2"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
jupyterlab = "^3.2.8"
osfclient = "^0.0.5"
ramp-workflow = "^0.4.0"
tensorflow = "^2.8.0"
jax = "^0.2.28"
jaxlib = "^0.1.76"
jax-resnet = "^0.0.4"
transformers = {git = "https://github.com/huggingface/transformers.git"}
timm = "^0.5.4"
ipywidgets = "^7.6.5"
pytorch-lightning = "^1.5.10"
pycocotools = "^2.0.4"
poethepoet = "^0.12.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
pydocstyle = "^6.1.1"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.2+cu113 torchvision==0.11.3+cu113 torchaudio==0.10.2+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
